--- a/_pug/index.html.pug
+++ b/_pug/index.html.pug
@@ -1,4 +1,7 @@
-|index
-p: a(href="core.html") Core
-p: a(href="nova.html") Nova
-p: a(href="nova-legacy.html") Nova Legacy
+extends _nova
+
+block content
+  h1| Index
+  p: a(href="core.html") Core
+  p: a(href="nova.html") Nova
+  p: a(href="nova-legacy.html") Nova Legacy
