--- a/_pug/nova.pug
+++ b/_pug/nova.pug
@@ -1,5 +1,5 @@
 block vars
-  - layout = '_core'
+  - layout = 'nova'
   -
     htmlClass = []
     bodyClass = []
@@ -7,11 +7,7 @@ block vars
 
 doctype html
 html(lang=lang class=htmlClass.join(' '))
-  .
-    <!--
-      page.path   : layout/core.md
-      page.layout : core
-    -->
+  |<!-- page.layout : !{layout} -->
   head.
     <meta charset="utf-8" />
     <!-- Begin Jekyll SEO tag v2.8.0 -->
