--- a/_pug/vars.pug
+++ b/_pug/vars.pug
@@ -1,6 +1,8 @@
+include ../_config
 -
-  siteurl = '/core-dev/'
-
   htmlClass = []
   bodyClass = []
   mainClass = []
+
+  siteTitle = title;
+  siteDescription = description;
