--- a/_pug/vars.pug
+++ b/_pug/vars.pug
@@ -1,8 +1,3 @@
-include ../_config
 -
-  htmlClass = []
-  bodyClass = []
-  mainClass = []
-
-  siteTitle = title;
-  siteDescription = description;
+  site_title       = title;
+  site_description = description;
