linking pugs page

--- a/_pug/core.pug
+++ b/_pug/core.pug
@@ -27,7 +27,7 @@ html(lang=lang||'en-US' class=htmlClass.join(' '))
   body
     ._view: ._layout: main._main
       header._header.
-        <h1><a href="!{site_url}x">!{site_title}</a></h1>
+        <h1><a href="!{pugs_url}">!{site_title}</a></h1>
       article._article: block content
     +credit  
     .
