--- a/_config.pug
+++ b/_config.pug
@@ -1,7 +1,8 @@
 -
-  version      = '0.0.1'
+  version      = '0.0.2'
 
   site_url     = '/core-dev/'
+  pugs_url     = '/core-dev/_pugs/'
   
   title        = 'Core Development'
   description  = 'This project is made to test and develop the Core.'
