--- a/_pug/core.pug
+++ b/_pug/core.pug
@@ -5,6 +5,7 @@ block vars
     htmlClass = ['_core_layout']
     bodyClass = []
     mainClass = []
+doctype html
 html(lang=lang||'en-US' class=htmlClass.join(' '))
   |<!-- page.layout : pug/!{layout} -->
   |<!-- page.path   : {{ page.path }} -->
