--- a/_config.pug
+++ b/_config.pug
@@ -2,7 +2,7 @@
   version      = '0.0.2'
 
   site_url     = '/core-dev/'
-  pugs_url     = '/core-dev/x/'
+  home_url     = '/core-dev/x/'
   
   title        = 'Core Development'
   description  = 'This project is made to test and develop the Core.'
