--- a/_pug/mixins.pug
+++ b/_pug/mixins.pug
@@ -6,4 +6,4 @@ mixin ---
   |---
 
 mixin credit
-  <div class="_credit"><a class="_credit_link" href="!{pugs_url}" title="Go to the Core">✨ Made with Core</a></div>
+  <div class="_credit"><a class="_credit_link" href="!{home_url}" title="Go to the Core">✨ Made with Core</a></div>
