--- a/x/index.html.pug
+++ b/x/index.html.pug
@@ -11,4 +11,4 @@ block content
     +_a("demo-new.html")| New
   pre.
     site_url: !{site_url}
-    pugs_url: !{pugs_url}
+    home_url: !{home_url}
