--- a/_pug/core.pug
+++ b/_pug/core.pug
@@ -8,7 +8,6 @@ block vars
 doctype html
 html(lang=lang||'en-US' class=htmlClass.join(' '))
   |<!-- page.layout : pug/!{layout} -->
-  |<!-- page.path   : {{ page.path }} -->
   head
     .
       <meta charset="!{charset || 'utf-8'}" />
@@ -26,7 +25,7 @@ html(lang=lang||'en-US' class=htmlClass.join(' '))
   body
     ._view: ._layout: main._main
       header._header.
-        <h1><a href="!{pugs_url}">!{site_title}</a></h1>
+        <h1><a href="!{home_url}">!{site_title}</a></h1>
       article._article: block content
     +credit  
     .
