--- a/assets/core/css/style.css
+++ b/assets/core/css/style.css
@@ -1,1 +1,1 @@
-._credit_link { font-family:system-ui,sans-serif; font-size: .83rem; position: absolute; position: fixed; bottom: 6px; right: 16px; left: auto; top: auto; padding: .2rem .4rem; box-shadow: 0 0 4px #0007; border-radius: 5px; color: #fff; text-decoration: none; background: #000; }
+._credit_link{font-family:Arial,system-ui,sans-serif;font-size:.83rem;position:absolute;position:fixed;bottom:6px;right:16px;left:auto;top:auto;padding:.2rem .4rem;box-shadow:0 0 4px rgba(0,0,0,.4);border-radius:5px;color:#fff;text-decoration:none;background:#000}
