--- a/_config.pug
+++ b/_config.pug
@@ -1,8 +1,8 @@
 -
   version      = '0.0.2'
 
-  site_url     = '/core-dev/'
-  home_url     = '/core-dev/x/'
+  site_url     = '/core-dev'
+  home_url     = '/core-dev/x'
   
   title        = 'Core Development'
   description  = 'This project is made to test and develop the Core.'
@@ -11,3 +11,6 @@
   lang         = 'en-US'
   theme_color  = '#222'
   color_scheme = 'light dark'
+
+  //- manifest - enable if you're building a PWA Apps
+  INCLUDE_MANIFEST = false
