--- a/_scss/core/css/style.scss
+++ b/_scss/core/css/style.scss
@@ -1,11 +1,48 @@
+html,body { margin:0 }
+.isvg svg { width:1em;height:1em;display:block }
+._nav,
+._header,
+._footer,
+._main { border:1px solid #888;margin:.5rem;padding:.5rem; }
+._nav,
+._header { border-color:#8885; }
+._flex { display:flex }
+._fill { flex:1 }
+._fit  { flex:0 }
+._pointer { cursor:pointer }
+._m0 { margin:0 }
+._scrollable { overflow:auto }
+// ---------------------------------------------------------------
+._logo {
+  font-family: 'Arial', system-ui, sans-serif;
+  font-weight: 600;
+  a { text-decoration:none !important; color:inherit }
+  a:hover { color:#4488ff }
+}
+._theme_switch {
+  font-size: 1.1em;
+  a { text-decoration:none !important; color:inherit; cursor:pointer; }
+  a:hover { color:#4488ff }
+}
+._nav {
+  font-family: 'Arial', system-ui, sans-serif;
+  a { text-decoration:none !important; color:inherit }
+  a:hover { color:#4488ff }
+}
+._credit {
+  position: absolute;
+  position: fixed;
+  top: auto;
+  left: auto;
+  right: 16px;
+  bottom: 6px;
+}
 ._credit_link {
   font-family: 'Arial', system-ui, sans-serif;
-  font-size: .83rem;
-  position: absolute; position: fixed;
-  bottom: 6px; right: 16px; left: auto; top: auto;
-  padding: .2rem .4rem;
-  box-shadow: 0 0 4px rgba(#000,.4);
+  font-size: .8rem;
+  padding: .2em .4em;
+  box-shadow: 0 2px 2px rgba(#000,.5);
   border-radius: 5px; color: #fff;
-  text-decoration: none;
   background: #000;
+  text-decoration: none !important;
 }
