--- a/_config.pug
+++ b/_config.pug
@@ -12,5 +12,4 @@
   theme_color  = '#222'
   color_scheme = 'light dark'
 
-  //- manifest - enable if you're building a PWA Apps
-  INCLUDE_MANIFEST = false
+  google_analytics = '{{ site.google_analytics }}'
