--- a/_layouts/core.html
+++ b/_layouts/core.html
@@ -12,28 +12,25 @@ layout: core
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=5.0,shrink-to-fit=no" />
     <meta id="_theme-color"  name="theme-color"  content="{{ page.theme_color | default: site.theme_color | default: '' }}" />
     <meta id="_color-scheme" name="color-scheme" content="{{ page.color_scheme | default: site.color_scheme | default: 'light dark' }}" />
-    <link id="_style" rel="stylesheet" href="{{ site.github.url }}/assets/core/css/style.css?v={{ site.github.build_revision }}" />
+    <link id="_style" rel="stylesheet" href="{{ site.github.url }}/assets/core/css/style.css?v={{ site.version || site.github.build_revision }}" />
     {% include custom-head.html %}
     <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"><![endif]-->
   </head>
   <body>
     <div class="_views"><div class="_view">
-      <header class="_header"><div class="_layout"></div></header>
-      <nav class="_nav"><div class="_layout"></div></nav>
-      <main class="_main"><article class="_article">
+      <header class="_header"><div class="_layout">
       {% if page.url == '' or page.url == '/' %}{% else -%}
         {% if page.show_title != 'hide' and site.show_title != 'hide' and site.title and site.title != page.title -%}
-          <h1 id="_title"><a href="{{ site.github.url }}">{{ site.title }}</a></h1>
+          <a href="{{ site.github.url }}">{{ site.title }}</a>
         {%- endif %}
       {%- endif %}
+      </div></header>
+      <nav class="_nav"><div class="_layout"></div></nav>
+      <main class="_main"><article class="_article _layout">
       {{ content }}
       </article></main>
       <footer class="_footer"><div class="_layout"></div></footer>
     </div></div>
-    {% include credit.html %}
-    <script>window.ghost = 'bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script src="{{ site.github.url }}/assets/core/js/script.js?v={{ site.github.build_revision }}"></script>
-    {% include anchors.html %}
     {% include custom-body.html %}
   </body>
 </html>
