--- a/_pugs/main.pug
+++ b/_pugs/main.pug
@@ -1,15 +1,14 @@
 include ../_config
-include mixins
 -
   site_title       = title;
   site_description = description;
 
-  //- metadata
-  now         = new Date()
-  today       = now.toGMTString()
-  year        = now.getFullYear()
+  now   = new Date()
+  today = now.toGMTString()
+  year  = now.getFullYear()
 
-  js   = { // javascripts
+  js   = {
+    //- javascripts
     goBack      : "(function(w){var h=w.history;w.opener?w.close():h.length>1?h.back():w.location.href='/';})(window)",
     themeChange : "theme.change();",
     print       : "window.print();",
@@ -17,9 +16,12 @@ include mixins
 
   onclick = ( _script='' ) => 'event.preventDefault();' + _script;
 
-  cssi = {}; // CSS images
+  cssi = {
+    //- CSS images
+  };
 
-  svgi = { // SVG images
+  svgi = {
+    //- SVG images
     bars:'M5,6H19V8H5V6M5,11H19V13H5V11M5,16H19V18H5V16Z',
     home:'M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z',
     caret:'M10,17L15,12L10,7V17Z',
@@ -32,25 +34,68 @@ include mixins
     spin:'M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z',
   };
 
+  fonts = [
+    'family=Roboto:ital,wght@0,100..900;1,100..900',
+    //- 'family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700',
+    //- 'family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700',
+    'family=Source+Code+Pro:ital,wght@0,400;0,700;1,400;1,700',
+    'display=swap',
+  ]
+
+include mixins
+
+mixin fonts
+  if fonts
+    link(rel="preconnect" href="https://fonts.googleapis.com")/
+    link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)/
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css2?"+fonts.join('&'))#_fonts/
+
+mixin icons
+  //- : prioritization sequence: first match, exact-size, type, then "any".
+  link(rel="apple-touch-icon" type="image/png"     sizes="180x180" href=site_url+"/icons/apple-touch-icon.png")/
+  link(rel="icon"             type="image/png"     sizes="32x32"   href=site_url+"/icons/favicon-32x32.png")/
+  link(rel="icon"             type="image/png"     sizes="16x16"   href=site_url+"/icons/favicon-16x16.png")/
+  link(rel="shortcut icon"             type="image/x-icon"  sizes="any"     href=site_url+"/icons/favicon.ico")/
+
+mixin manifest
+  //- enable manifest if you're building a PWA Apps
+  link(rel="manifest" href!=`${site_url}/manifest.json?v=${version}`)/
+
 mixin logo
-  ._logo: a(href=home_url) #{site_title}
+  ._logo: block logo
+    if !isHome
+      a(href=home_url) #{site_title}
+
+mixin nav
+  +_a("home.html")| Home
+  +_a("page.html")| Page
+  +_a("demo-old.html")| Old
+  +_a("demo-new.html")| New
 
 mixin credit
-  ._credit: a._credit_link(href='https://techie-joe.github.io/core' title="Go to the Core")| ✨ Made with Core
-
+  ._credit: block credit
+    a._credit_link(href='https://techie-joe.github.io/core' title="Go to the Core")| ✨ Made with Core
 
 mixin theme_switch(title='Change Theme (Alt+T)')
-  ._theme_switch._needjs: a(href='#' onclick!=onclick(js.themeChange) title=title): block
+  ._theme_switch._needjs: a(href='#' onclick!=onclick(js.themeChange) title=title): block theme_switch
     +isvg(svgi.compare)
 
-mixin themejs
-  - ghost = [ "localhost", "techie-joe.github.io" ];
-  script| window.ghost = '!{btoa(ghost)}';
-  +js(site_url+"/assets/themejs/themejs_v2.0.js?v=!{version}")
+mixin themejs(ghost=[ "localhost", "techie-joe.github.io" ])
+  script|window.ghost='!{btoa(ghost)}';
+  +js(`${site_url}/assets/themejs/themejs_v2.0.js?v=${version}`)
 
 mixin anchor
-  //- .
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script><script>anchors?.add();</script>
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous")
+  script.
+    anchors?.add();
+
+mixin google_analytics
+  script(async src="https://www.googletagmanager.com/gtag/js?id="+google_analytics)
+  script.
+    window.dataLayer=window.dataLayer||[];
+    function gtag(){window.dataLayer.push(arguments);}
+    gtag('js',new Date());
+    gtag('config','!{ google_analytics }');
 
 mixin fouc
   style.
