--- a/_config.pug
+++ b/_config.pug
@@ -4,7 +4,7 @@
   site_url     = '/core-dev'
   home_url     = '/core-dev/x'
   
-  title        = 'Core Development'
+  title        = 'CoreDev'
   description  = 'This project is made to test and develop the Core.'
   
   charset      = 'utf-8'
@@ -12,4 +12,5 @@
   theme_color  = '#222'
   color_scheme = 'light dark'
 
-  google_analytics = '{{ site.google_analytics }}'
+  google_analytics     = '{{ site.google_analytics }}'
+  cloudflare_analytics = '{{ site.cloudflare_analytics }}'
