--- a/x/index.html.pug
+++ b/x/index.html.pug
@@ -13,4 +13,5 @@ block content
     version  : !{version}
     revision : !{[30,now.getHours(),now.getMinutes()+now.getSeconds()].join('.')}
 
-    google_analytics : !{ google_analytics||'(undefined)' }
+    google_analytics     : !{ google_analytics||'(undefined)' }
+    cloudflare_analytics : !{ cloudflare_analytics||'(undefined)' }
