fix thumbnail and description

--- a/_config.pug
+++ b/_config.pug
@@ -12,5 +12,5 @@
   theme_color  = '#222'
   color_scheme = 'light dark'
 
-  google_analytics     = '{{ site.google_analytics }}'
-  cloudflare_analytics = '{{ site.cloudflare_analytics }}'
+  //- google_analytics     = 'google_analytics_id'
+  //- cloudflare_analytics = 'cloudflare_analytics_id'
