--- a/_pugs/core.pug
+++ b/_pugs/core.pug
@@ -35,11 +35,10 @@ block html
             ._fit: +theme_switch
         nav._nav: ._layout: block nav
           //- code // nav
-          +nav
         main._main: article._article._layout: block content
-          code // content
+          //- code // content
         footer._footer: ._layout: block footer
-          code // footer
+          //- code // footer
       |<!-- custom-body -->
       +credit
       +themejs
