--- a/_config.pug
+++ b/_config.pug
@@ -2,7 +2,7 @@
   version      = '0.0.2'
 
   site_url     = '/core-dev'
-  home_url     = '/core-dev/x'
+  home_url     = '/core-dev/go'
   
   title        = 'CoreDev'
   description  = 'This project is made to test and develop the Core.'
@@ -11,6 +11,7 @@
   lang         = 'en-US'
   theme_color  = '#222'
   color_scheme = 'light dark'
+  ghost        = btoa([ "localhost", "techie-joe.github.io" ])
 
   //- google_analytics     = 'google_analytics_id'
   //- cloudflare_analytics = 'cloudflare_analytics_id'
