--- a/_pugs/core.pug
+++ b/_pugs/core.pug
@@ -34,11 +34,11 @@ block html
             ._fill: +logo
             ._fit: +theme_switch
         nav._nav: ._layout: block nav
-          //- code // nav
+          code // nav
         main._main: article._article._layout: block content
-          //- code // content
+          code // content for : !{title}
         footer._footer: ._layout: block footer
-          //- code // footer
+          code // footer
       |<!-- custom-body -->
       +credit
       +themejs
