--- a/_scss/core/css/style.scss
+++ b/_scss/core/css/style.scss
@@ -1,4 +1,5 @@
 html,body { margin:0 }
+.reversefootnote { text-decoration:none !important }
 .isvg svg { width:1em;height:1em;display:block }
 ._nav,
 ._header,
@@ -36,6 +37,8 @@ html,body { margin:0 }
   right: 16px;
   bottom: 6px;
 }
+._footer { position:fixed;bottom:0;width:100%;margin:0;padding:0; }
+._footer ._layout { margin:.5rem;padding:.5rem; }
 ._credit_link {
   font-family: 'Arial', system-ui, sans-serif;
   font-size: .8rem;
