--- a/_pugs/main.pug
+++ b/_pugs/main.pug
@@ -7,6 +7,8 @@ include ../_config
   today = now.toGMTString()
   year  = now.getFullYear()
 
+  version += '.'+(now.getMinutes()*100+now.getSeconds())
+
   js   = {
     //- javascripts
     goBack      : "(function(w){var h=w.history;w.opener?w.close():h.length>1?h.back():w.location.href='/';})(window)",
