--- a/go/index.html.pug
+++ b/go/index.html.pug
@@ -1,24 +1,17 @@
-extends /_pugs/core
+extends _html
 block append vars
   -
     path   = 'index.html'
     title  = `Index`
 block logo
   span._pointer #{site_title}
-block nav
-  //- code // nav
-  div 
-    +_a("home.html")| Home
-    +_a("page.html")| Page
-    +_a("demo-old.html")| Old
-    +_a("demo-new.html")| New
 block content
-  code // Developing style for Core
+  code // !{title}
   pre._scrollable.
     site_url : #[a._no_u(href=site_url)|!{site_url}]
     home_url : #[a._no_u(href=home_url)|!{home_url}]
     version  : !{version}
-    revision : !{[32,now.getHours(),now.getMinutes()+now.getSeconds()].join('.')}
+    revision : !{[33,now.getHours(),now.getMinutes()*100+now.getSeconds()].join('.')}
     ghost                : !{ghost}
     google_analytics     : !{google_analytics||'(undefined)'}
     cloudflare_analytics : !{cloudflare_analytics||'(undefined)'}
