update code site

--- a/go/index.html.pug
+++ b/go/index.html.pug
@@ -6,7 +6,7 @@ block append vars
 block logo
   span._pointer #{site_title}
 block content
-  code // !{title}
+  code // !{description}
   pre._scrollable.
     site_url : #[a._no_u(href=site_url)|!{site_url}]
     home_url : #[a._no_u(href=home_url)|!{home_url}]
