--- a/_scss/core/css/style.scss
+++ b/_scss/core/css/style.scss
@@ -1,10 +1,11 @@
+body::before { content:'32';position:absolute;font-size:.8rem;opacity:.5;padding:0 .5rem }
 html,body { margin:0 }
 .reversefootnote { text-decoration:none !important }
-.isvg svg { width:1em;height:1em;display:block }
+.isvg svg { width:1em;height:1em;display:inline-block;vertical-align:text-bottom }
 ._nav,
 ._header,
 ._footer,
-._main { border:1px solid transparent;margin:.5rem;padding:.5rem; }
+._main { border:1px solid transparent;margin:.5rem;padding:.5rem }
 ._flex { display:flex }
 ._fill { flex:1 }
 ._fit  { flex:0 }
@@ -20,7 +21,6 @@ html,body { margin:0 }
   a:hover { color:#4488ff }
 }
 ._theme_switch {
-  font-size: 1.15em;
   a { text-decoration:none !important; color:inherit; cursor:pointer; }
   a:hover { color:#4488ff }
 }
