--- a/go/core/_html.pug
+++ b/go/core/_html.pug
@@ -1,6 +1,8 @@
 extends /_pugs/core
 block nav
   +_a(home_url+"/core/")| Core
+  +l
+  +isvg(svgi.angle)
   +_a(home_url+"/core/home.html")| Home
   +_a(home_url+"/core/page.html")| Page
   +_a(home_url+"/core/demo.html")| Demo
