--- a/_pugs/core.pug
+++ b/_pugs/core.pug
@@ -33,11 +33,11 @@ block html
           ._flex
             ._fill: +logo
             ._fit: +theme_switch
-        nav._nav: ._layout: block nav
+        nav._nav: ._layout._960: block nav
           code // nav
-        main._main: article._article._layout: block content
+        main._main: article._article._layout._960: block content
           code // content for : !{title}
-        footer._footer: ._layout: block footer
+        footer._footer: ._layout._960: block footer
           code // footer
       |<!-- custom-body -->
       +credit
