--- a/go/core/_html.pug
+++ b/go/core/_html.pug
@@ -7,3 +7,5 @@ block nav
   +_a(home_url+"/core/page.html")| Page
   +_a(home_url+"/core/demo.html")| Demo
   +_a(home_url+"/core/legacy.html")| Legacy
+block footer
+  code // by Techie Joe !{year}
