--- a/_scss/core/css/style.scss
+++ b/_scss/core/css/style.scss
@@ -1,33 +1,39 @@
-body::before { content:'32';position:absolute;font-size:.8rem;opacity:.5;padding:0 .5rem }
+@use "rouge";
+// ---------------------------------------------------------------
 html,body { margin:0 }
-.reversefootnote { text-decoration:none !important }
-.isvg svg { width:1em;height:1em;display:inline-block;vertical-align:text-bottom }
+body { overflow-y:scroll }
 ._nav,
 ._header,
 ._footer,
 ._main { border:1px solid transparent;margin:.5rem;padding:.5rem }
-._flex { display:flex }
-._fill { flex:1 }
-._fit  { flex:0 }
-._pointer { cursor:pointer }
-._m0 { margin:0 }
-._scrollable { overflow:auto }
-._no_u { text-decoration:none !important }
+// ---------------------------------------------------------------
+article {
+  blockquote { border-left: 5px solid #888; padding: 0 .5rem; }
+  hr { border: 1px solid #888 }
+  pre { padding:.5rem;overflow:auto }
+  table {
+    & { border-collapse: collapse }
+    &, td, th { border: 1px solid #888 }
+    td, th { padding:.5rem }
+  }
+  dt { font-style: italic }
+  details summary { @extend ._pointer; }
+}
+a {
+  &:link { color:#57F }
+  &:visited { color:#A6D }
+}
 // ---------------------------------------------------------------
 ._logo {
   font-family: 'Arial', system-ui, sans-serif;
   font-weight: 600;
-  a { text-decoration:none !important; color:inherit }
-  a:hover { color:#4488ff }
 }
-._theme_switch {
-  a { text-decoration:none !important; color:inherit; cursor:pointer; }
-  a:hover { color:#4488ff }
-}
+._nav { font-family: 'Arial', system-ui, sans-serif; }
+._logo,
+._theme_switch,
 ._nav {
-  font-family: 'Arial', system-ui, sans-serif;
   a { text-decoration:none !important; color:inherit }
-  a:hover { color:#4488ff }
+  a:hover { color:#57F }
 }
 ._credit {
   position: absolute;
@@ -42,7 +48,71 @@ html,body { margin:0 }
   font-size: .8rem;
   padding: .2em .4em;
   box-shadow: 0 2px 2px rgba(#000,.5);
-  border-radius: 5px; color: #fff;
-  background: #000;
+  border-radius: 5px;
+  background: #000 !important;
+  color: #fff !important;
   text-decoration: none !important;
+}
+// ---------------------------------------------------------------
+._960 { width:960px; @extend .mc; }
+._flex { display:flex }
+._fill { flex:1 }
+._fit  { flex:0 }
+._pointer { cursor:pointer }
+._scrollable { overflow:auto }
+._no_u { text-decoration:none !important }
+// ---------------------------------------------------------------
+.hero {
+  display: block;
+  font-size: 2.25em;
+  margin-block-start: .67em;
+  margin-block-end: .67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+.indent{text-indent:2rem}
+.big-first.indent{text-indent:0 !important}
+.big-first.indent::first-letter{margin-left:2rem}
+.big-first::first-letter{
+  float:left;
+  font-size:4em;
+  font-weight:700;
+  line-height:.9;
+  margin-right:.1em;
+  font-family:"Georgia","Constantia,Cambria","Book Antiqua","Palatino Linotype","Big Caslon",serif;
+}
+
+.text-primary{ @extend .text-blue; }
+.text-blue{color:#57F !important}
+.text-red{color:#E22 !important}
+.text-green{color:#2A4 !important}
+.text-purple{color:#A6D !important}
+.text-white{color:#fff !important}
+.text-black{color:#000 !important}
+.text-gray,.text-grey{color:grey !important}
+.text-slategray,.text-slategrey{color:#789 !important}
+
+.text-justify{text-align:justify}
+
+.full-width { width:100% }
+
+.float-left { float: left }
+.float-right { float: right }
+
+.centered { display:block;@extend .mc; }
+
+.mc { margin-left:auto;margin-right:auto }
+.m0 { margin:0 }
+.ml { margin-left: 1em }
+.mb { margin-bottom: 1em }
+
+.nowrap{white-space:nowrap !important}
+.reversefootnote { text-decoration:none !important }
+.isvg svg {
+  width:1em;
+  height:1em;
+  display:inline-block;
+  vertical-align:text-bottom;
 }
