--- a/_pugs/go/_html.pug
+++ b/_pugs/go/_html.pug
@@ -1,5 +1,6 @@
-extends /_pugs/core
+extends /_pug_layouts/core
 block nav
   +_a(home_url+"/core/")| Core
+  +_a(home_url+"/nova/")| Nova
 block footer
   code // by Techie Joe !{year}
