--- a/_pugs/go/index.html.pug
+++ b/_pugs/go/index.html.pug
@@ -7,7 +7,7 @@ block logo
   span._pointer #{site_title}
 block content
   code // !{description}
-  pre._scrollable.
+  pre.scrollable.
     site_url : #[a._no_u(href=site_url)|!{site_url}]
     home_url : #[a._no_u(href=home_url)|!{home_url}]
     version  : !{version}
