--- a/_pug_layouts/core.pug
+++ b/_pug_layouts/core.pug
@@ -9,7 +9,7 @@ block html
   doctype html
   html(lang=lang||'en-US' class=htmlClass.join(' '))
     |<!-- page.path   : !{path} -->
-    |<!-- page.layout : pug/!{layout} -->
+    |<!-- page.layout : pugs/!{layout} -->
     head
       meta(charset=charset||'utf-8')/
       |<!-- Begin Jekyll SEO tag v2.8.0 -->
@@ -19,20 +19,20 @@ block html
       meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")/
       meta#_color_scheme(name="color-scheme" content=color_scheme||'')/
       meta#_theme_color(name="theme-color" content=theme_color||'')/
-      link#_style(rel="stylesheet" href!=`${site_url}/assets/core/css/style.css?v=${version}`)/
+      block style
+        link#_style(rel="stylesheet" href!=`${site_url}/assets/core/css/style.css?v=${version}`)/
       |<!-- custom-head -->
       //- +fonts
       //- +icons
       //- +manifest
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
-      block style
     body
       ._views: ._view
         header._header: ._layout: block header
           //- code // header
-          ._flex
-            ._fill: +logo
-            ._fit: +theme_switch
+          .flex
+            .fill: +logo
+            .fit: +theme_switch
         nav._nav: ._layout._960: block nav
           code // nav
         main._main: article._article._layout._960: block content
