--- a/_scss/core/css/style.scss
+++ b/_scss/core/css/style.scss
@@ -1,89 +1,16 @@
-@use "rouge";
-$text-blue: #57F;
-$text-red: #E22;
-$text-green:#2A4;
-$text-purple: #A6D;
-// ---------------------------------------------------------------
-.text-primary{ @extend .text-blue; }
-.text-blue{color:$text-blue !important}
-.text-red{color:$text-red !important}
-.text-green{color:$text-green !important}
-.text-purple{color:$text-purple !important}
-.text-white{color:#fff !important}
-.text-black{color:#000 !important}
-.text-gray,.text-grey{color:#888 !important}
-.text-slategray,.text-slategrey{color:#789 !important}
-.hero {
-  display:block;
-  font-size:2.25em;
-  margin-block-start:.67em;
-  margin-block-end:.67em;
-  font-weight: bold;
-}
-.indent{text-indent:2rem}
-.big-first.indent{text-indent:0 !important}
-.big-first.indent::first-letter{margin-left:2rem}
-.big-first::first-letter{
-  float:left;
-  font-size:4em;
-  font-weight:700;
-  line-height:.9;
-  margin-right:.1em;
-  font-family:"Georgia","Constantia,Cambria","Book Antiqua","Palatino Linotype","Big Caslon",serif;
-}
-.text-justify{text-align:justify}
-
-.full-width { width:100% }
-
-.float-left { float: left }
-.float-right { float: right }
-
-.centered { display:block;@extend .mc; }
-
-.mc { margin-left:auto;margin-right:auto }
-.m0 { margin:0 }
-.ml { margin-left: 1em }
-.mb { margin-bottom: 1em }
-
-.nowrap{white-space:nowrap !important}
-.reversefootnote { text-decoration:none !important }
-.isvg svg {
-  width:1em;
-  height:1em;
-  display:inline-block;
-  vertical-align:text-bottom;
-}
-// ---------------------------------------------------------------
-html,body { margin:0 }
-body { overflow-y:scroll }
-a {
-  &:link { color:$text-blue }
-  &:visited { color:$text-purple }
-  &:hover { color:$text-blue }
-}
-article {
-  blockquote { border-left: 5px solid #888; padding: 0 .5rem; }
-  hr { border: 1px solid #888 }
-  pre { padding:.5rem;overflow:auto }
-  table {
-    & { border-collapse: collapse }
-    &, td, th { border: 1px solid #888 }
-    td, th { padding:.5rem }
-  }
-  dt { font-style: italic }
-  details summary { @extend ._pointer; }
-}
+@use "_color" as *;
+@use "_base";
+@use "_rouge";
 // ---------------------------------------------------------------
 ._nav,
 ._header,
 ._footer,
 ._main { border:1px solid transparent;margin:.5rem;padding:.5rem }
+._960 { width:960px; @extend .mc; }
 // ---------------------------------------------------------------
 ._logo { font-weight: 600 }
-._logo, ._nav, ._credit_link {
-  font-family: 'Arial', system-ui, sans-serif;
-}
-._logo, ._theme_switch, ._nav {
+._logo, ._nav { font-family: 'Arial', system-ui, sans-serif; }
+._logo, ._nav, ._theme_switch {
   a { text-decoration:none !important; color:inherit }
   a:hover { color:$text-blue }
 }
@@ -96,19 +23,12 @@ article {
   bottom:6px;
 }
 ._credit_link {
-  font-size: .8rem;
-  padding: .2em .4em;
-  box-shadow: 0 2px 2px rgba(#000,.5);
-  border-radius: 5px;
+  font-family: 'Arial', system-ui, sans-serif !important;
+  font-size: .8rem !important;
+  padding: .2em .4em !important;
+  box-shadow: 0 2px 2px rgba(#000,.5) !important;
+  border-radius: 5px !important;
   background: #000 !important;
   color: #fff !important;
   text-decoration: none !important;
 }
-// ---------------------------------------------------------------
-._960 { width:960px; @extend .mc; }
-._flex { display:flex }
-._fill { flex:1 }
-._fit  { flex:0 }
-._pointer { cursor:pointer }
-._scrollable { overflow:auto }
-._no_u { text-decoration:none !important }
