--- a/_pugs/go/core/_html.pug
+++ b/_pugs/go/core/_html.pug
@@ -7,5 +7,6 @@ block nav
   +_a(home_url+"/core/page.html")| Page
   +_a(home_url+"/core/demo.html")| Demo
   +_a(home_url+"/core/legacy.html")| Legacy
+  +_a(home_url+"/core/404.html")| 404
 block footer
   code // by Techie Joe !{year}
