--- a/_config.pug
+++ b/_config.pug
@@ -2,7 +2,7 @@
   version      = '0.0.2'
 
   site_url     = '/core-dev'
-  home_url     = '/core-dev/go'
+  home_url     = '/core-dev'
   
   title        = 'CoreDev'
   description  = 'This project is made to test and develop the Core.'
