--- a/_config.pug
+++ b/_config.pug
@@ -1,11 +1,11 @@
 -
   version      = '0.0.2'
 
-  site_url     = '/core-dev'
-  home_url     = '/core-dev'
+  site_url     = '/dove'
+  home_url     = '/dove'
   
-  title        = 'CoreDev'
-  description  = 'This project is made to test and develop the Core.'
+  title        = 'Dove'
+  description  = 'Dove is a theme development project.'
   
   charset      = 'utf-8'
   lang         = 'en-US'
