--- a/_pugs/index.html.pug
+++ b/_pugs/index.html.pug
@@ -20,6 +20,7 @@ block content
     cloudflare_analytics : !{cloudflare_analytics||'(undefined)'}
   code // Layouts
   nav: ul
+    li: +a('home') Home
     li: +nav_('core')
     li: +nav_('nova')
     li: +nav_('mallet')
