--- a/_pugs/primer/index.html.pug
+++ b/_pugs/primer/index.html.pug
@@ -4,4 +4,4 @@ block append vars
     path   = 'core/index.html'
     title  = `Core`
 block content
-  include /_pugs/demo_.html
+  include /_includes/demo_.html
