--- a/_pugs/index.html.pug
+++ b/_pugs/index.html.pug
@@ -18,9 +18,11 @@ block content
     ghost                : !{ghost}
     google_analytics     : !{google_analytics||'(undefined)'}
     cloudflare_analytics : !{cloudflare_analytics||'(undefined)'}
-  code // Layouts
+  code // Markdowns
   nav: ul
     li: +a('home') Home
+  code // Layouts
+  nav: ul
     li: +nav_('core')
     li: +nav_('nova')
     li: +nav_('mallet')
