--- a/_includes/legacy_.html
+++ b/_includes/legacy_.html
@@ -1,6 +1,6 @@
 <p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
 
-<p><a href="./demo.html">Link to another page</a>.</p>
+<p><a href="./">Link to another page</a>.</p>
 
 <p>There should be whitespace between paragraphs.</p>
 
