--- a/_pugs/primer/index.html.pug
+++ b/_pugs/primer/index.html.pug
@@ -1,7 +1,7 @@
 extends _html
 block append vars
   -
-    path   = 'core/index.html'
-    title  = `Core`
+    path   = 'primer/index.html'
+    title  = `Primer`
 block content
   include /_includes/demo_.html
