--- a/_pugs/_layouts/primer.pug
+++ b/_pugs/_layouts/primer.pug
@@ -35,12 +35,15 @@ block html
           h1: a(href=home_url) #{site_title}
         block content
           p: code // content for : !{title}
-        block footer
-          p: code // footer
-        .my-3.text-right
-          p!='{% include edit-link.html %}'
-          |<!-- custom-body -->
-          +credit
-          //- +themejs
-          //- +anchor
-          +google_analytics
+        .footer.border-top.border-gray-light.mt-5.pt-3.text-right.text-gray
+          block footer
+            //- p: code // footer
+            if path
+              - source_url = `https://github.com/techie-joe/dove/edit/main/_pugs/${path}.pug`;
+            if source_url
+              p This site is open source. #[a(href=source_url)| Improve this page].
+            +credit
+        |<!-- custom-body -->
+        //- +themejs
+        +anchor
+        +google_analytics
