--- a/_includes/legacy_.html
+++ b/_includes/legacy_.html
@@ -135,13 +135,13 @@
   <li>level 1 item</li>
 </ul>
 
-<!-- <h3 id="small-image">Small image</h3>
+<h3 id="small-image">Small image</h3>
 
 <p><img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Small image" /></p>
 
 <h3 id="large-image">Large image</h3>
 
-<p><img src="https://techie-joe.github.io/core/images/299-1024x368.jpg" alt="Large image" /></p> -->
+<p><img src="https://techie-joe.github.io/core/images/branching-2098x528.png" alt="Large image" /></p>
 
 <h3 id="definition-lists-can-be-used-with-html-syntax">Definition lists can be used with HTML syntax.</h3>
 
