--- a/_pugs/primer/page.html.pug
+++ b/_pugs/primer/page.html.pug
@@ -3,3 +3,14 @@ block append vars
   -
     path   = 'primer/page.html'
     title  = `Page`
+block content
+  h2 Welcome to another page
+  p: code // yay
+  div(style="margin-top:8rem")
+  hr/
+  p
+    +back_button
+    +l
+    +gohome_button
+    b!=' : '
+    a(href="legacy.html") Next page
