--- a/_scss/primer/css/style.scss
+++ b/_scss/primer/css/style.scss
@@ -1,69 +1,47 @@
+@use "_color" as *;
+@use "sass:color";
 @use "_primer";
-@use "_credit";
+@use "../../core/css/_base";
+@use "../../core/css/_credit";
 // ---------------------------------------------------------------
-// core fix
-.bg-primary.text-white { color:#000 !important }
+// primer fix
+.text-gray,.text-grey{color:#888}
+.text-slategray,.text-slategrey{color:#789}
+
+.text-primary { color:$text-blue }
+.text-secondary { color:$text-green }
+
+.bg-primary { background-color:$text-blue }
+
+.text-justify{text-align:justify}
 // ---------------------------------------------------------------
-// core styles
-.scrollable{overflow:auto}
-.pointer{cursor:pointer}
-
-.hero {
-  display:block;
-  font-size:2.25em;
-  margin-block-start:.67em;
-  margin-block-end:.67em;
-  font-weight: bold;
-}
-
-.indent{text-indent:2em}
-.big-first.indent{text-indent:0}
-.big-first.indent::first-letter{margin-left:2em}
-.big-first::first-letter{
-  float:left;
-  font-size:4em;
-  font-weight:700;
-  line-height:.9;
-  margin-right:.1em;
-  font-family:"Georgia","Constantia,Cambria","Book Antiqua","Palatino Linotype","Big Caslon",serif;
-}
-
-a.button {
-  border: 1px solid;
-  padding: .25em .5em;
-  border-radius: .25em;
-  text-decoration: none;
-}
-
-.box {
-  border: 1px solid #888;
-  padding: .5rem;
-}
-
-.flex { display:flex }
-.fill { flex:1 }
-.fit  { flex:0 }
-
-.full-width{width:100%}
-
-.mc { margin-left:auto;margin-right:auto }
-.m0 { margin:0 }
-.ma { margin:1em }
-.mv0 { margin-top:0;margin-bottom:0 }
-.mh0 { margin-left:0;margin-right:0 }
-.mv { margin-top:1em;margin-bottom:1em }
-.mh { margin-left:1em;margin-right:1em }
-.ml { margin-left:1em }
-.mr { margin-right:1em }
-.mt { margin-top:1em }
-.mb { margin-bottom:1em }
-
-.no_u { text-decoration:none !important }
-.no_wrap { white-space:nowrap !important }
-
-.isvg svg {
-  width:1em;
-  height:1em;
-  display:inline-block;
-  vertical-align:text-bottom;
+._dark {
+  body {
+    color: color.invert(#24292e);
+    background-color: color.invert(#fff);
+  }
+  .markdown-body {
+    h1,h2 { border-color:#444 }
+    code,tt { background-color:#222 }
+    .highlight,
+    .highlight pre,
+    pre { background-color: color.invert(#e6e8ea); }
+    .highlight {
+      code { background:none }
+      .err { color:#d22 }
+      .gr, .gt { color: #e36; }
+      .ne, .nf, .nl { color:#c33 }
+      .ni { color: #a3a; }
+      .nt { color: #449; }
+      .k,.o,.kd { color:#fff }
+      .kc { color:#dbd6d1 }
+    }
+    table {
+      tr { background-color: color.invert(#fff); }
+      th, td { border-color:#444 }
+    }
+  }
+  hr { background-color: #444 }
+  .box { border-color:#444 }
+  .border-gray-light { border-color:#444 !important }
 }
